# airfoil_dashboard

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: airfoil_coordinates.txt  cfd_runner.py  components.py  history_manager.py  old_airfoil_to_stl.py  streamlit_interface.py  utils_old.py
src/airfoil_simulation_dashboard/: __init__.py  airfoil_app.py  airfoil_simulation_dashboard.py  cli.py
src/cfd/: airfoil.stl  airfoil_coordinates.txt  airfoil_to_stl.py  new_airfoil_to_stl.py  old_airfoil_to_stl.py
src/cfd/Mesh/: Allrun
src/cfd/Mesh/system/: controlDict  surfaceFeaturesDict
src/cfd/Run/: Allclean  Allrun  vtk_video.py
src/cfd/Run/0/: yPlus
src/cfd/Run/0.org/: U  k  p
src/cfd/Run/100/: U  k  nut  omega  p  phi
src/cfd/Run/120/: U  k  nut  omega  p  phi
src/cfd/Run/140/: U  k  nut  omega  p  phi
src/cfd/Run/160/: U  k  nut  omega  p  phi
src/cfd/Run/180/: U  k  nut  omega  p  phi
src/cfd/Run/20/: U  k  nut  omega  p  phi
src/cfd/Run/200/: U  k  nut  omega  p  phi
src/cfd/Run/220/: U  k  nut  omega  p  phi
src/cfd/Run/240/: U  k  nut  omega  p  phi
src/cfd/Run/260/: U  k  nut  omega  p  phi
src/cfd/Run/280/: U  k  nut  omega  p  phi
src/cfd/Run/300/: U  k  nut  omega  p  phi
src/cfd/Run/320/: U  k  nut  omega  p  (+1 more)
src/cfd/airfoil_snappyHexMesh_old/: Allrun
tests/: __init__.py  test_airfoil_simulation_dashboard.py
(+250 files in other folders)
