[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airfoil_simulation_dashboard"
version = "0.1.0"
description = "A dashboard to visualize and automate airfoil CFD simulations using Python"
readme = "README.rst"
authors = [
  {name = "David Tawfelis", email = "da16aag@outlook.com"}
]
maintainers = [
  {name = "David Tawfelis", email = "da16aag@outlook.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/David/airfoil_simulation_dashboard/issues"
changelog = "https://github.com/David/airfoil_simulation_dashboard/blob/master/changelog.md"
homepage = "https://github.com/David/airfoil_simulation_dashboard"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

